# contur-2

./: .clang-format  Contur.sln  README.md
.github/: IMPLEMENTATION_PLAN.md  dependabot.yml
.github/instructions/: contur2.instructions.md  overview.instructions.md
.github/workflows/: ci.yml  docs.yml
Contur/: ArchitectureCPU.h  CPU.h  Contur.cpp  Contur.vcxproj  Contur.vcxproj.filters  Device.h  Dispatcher.h  HANDLE.h  Kernel.h  LAN.h  MMU.h  MPDispatcher.h  Memory.h  Process.h  Scheduler.h  Statistic.h  VirtualMemory.h  stdafx.cpp
Contur/x64/Debug/: Contur.exe.recipe  Contur.ilk  vc143.idb
Contur/x64/Debug/Contur.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Contur.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
docs/reports/: 01_architecture_foundation.md  02_memory_and_processes.md  03_execution_core.md  04_scheduling_policies.md  05_dispatch_sync_tracing.md  06_kernel_services.md  07_tui_and_demos.md  08_native_testing_ci.md  README.md
src/: CMakeLists.txt  CMakePresets.json  build.ps1
src/contur/: process.cpp  scheduler.cpp
src/contur/arch/: register_file.cpp
src/contur/core/: clock.cpp
src/contur/cpu/: alu.cpp  cpu.cpp
src/contur/dispatch/: dispatcher.cpp  dispatcher_pool.cpp  mp_dispatcher.cpp  serial_dispatch_runtime.cpp
src/contur/execution/: interpreter_engine.cpp
src/contur/io/: console_device.cpp  device_manager.cpp  network_device.cpp
src/contur/kernel/: kernel.cpp  kernel_builder.cpp  kernel_diagnostics.cpp
src/contur/memory/: clock_replacement.cpp  fifo_replacement.cpp  lru_replacement.cpp  mmu.cpp  optimal_replacement.cpp  page_table.cpp  physical_memory.cpp  virtual_memory.cpp
src/contur/process/: pcb.cpp  process_image.cpp
src/contur/scheduling/: fcfs_policy.cpp  hrrn_policy.cpp  mlfq_policy.cpp  priority_policy.cpp  round_robin_policy.cpp  scheduler.cpp  spn_policy.cpp  srt_policy.cpp
src/contur/sync/: deadlock_detector.cpp  mutex.cpp  semaphore.cpp
src/contur/tracing/: console_sink.cpp  file_sink.cpp  tracer.cpp
src/contur/tui/: kernel_read_model.cpp  tui_controller.cpp
src/demos/: demo_multiprocessor.cpp
src/docs/doxygen/: Doxyfile.in  Doxyfile.override.in  doxygen-awesome-overrides.css  getting_started.md  header.html  mainpage.md
src/include/contur/arch/: block.h  instruction.h  interrupt.h  isa.h  register_file.h
src/include/contur/core/: clock.h  error.h  event.h  types.h
src/include/contur/cpu/: alu.h  cpu.h  i_cpu.h
src/include/contur/dispatch/: dispatcher.h  dispatcher_pool.h  i_dispatch_runtime.h  i_dispatcher.h  mp_dispatcher.h  serial_dispatch_runtime.h  threading_config.h
src/include/contur/execution/: execution_context.h  i_execution_engine.h  interpreter_engine.h
src/include/contur/io/: console_device.h  device_manager.h  i_device.h  network_device.h
src/include/contur/kernel/: i_kernel.h  i_kernel_diagnostics.h  kernel.h  kernel_builder.h  kernel_diagnostics.h
src/include/contur/memory/: clock_replacement.h  fifo_replacement.h  i_memory.h  i_mmu.h  i_page_replacement.h  i_virtual_memory.h  lru_replacement.h  mmu.h  optimal_replacement.h  page_table.h  physical_memory.h  virtual_memory.h
src/include/contur/process/: i_process.h  pcb.h  priority.h  process_image.h  state.h
src/include/contur/scheduling/: fcfs_policy.h  hrrn_policy.h  i_scheduler.h  i_scheduling_policy.h  mlfq_policy.h  priority_policy.h  round_robin_policy.h  scheduler.h  spn_policy.h  srt_policy.h  statistics.h
src/include/contur/sync/: critical_section.h  deadlock_detector.h  i_sync_primitive.h  mutex.h  semaphore.h
src/include/contur/tracing/: i_tracer.h  null_tracer.h  trace_event.h  trace_level.h  trace_scope.h  tracer.h
src/include/contur/tui/: i_kernel_read_model.h  i_tui_controller.h  tui_commands.h  tui_models.h
src/tests/: CMakeLists.txt
src/tests/integration/: test_deterministic_multithread.cpp  test_kernel_api.cpp  test_kernel_end_to_end.cpp  test_process_scheduling_integration.cpp  test_tui_tick_navigation.cpp
src/tests/unit/: test_alu.cpp  test_clock.cpp  test_cpu.cpp  test_device_manager.cpp  test_dispatcher.cpp  test_dispatcher_pool.cpp  test_event.cpp  test_fcfs.cpp  test_hrrn.cpp  test_interpreter_engine.cpp  test_ipc_manager_extended.cpp  test_kernel_builder.cpp  test_kernel_diagnostics.cpp  test_message_queue_extended.cpp  test_mlfq.cpp  test_mmu.cpp  test_mp_dispatcher.cpp  test_page_replacement.cpp  test_page_table.cpp  test_pcb.cpp  test_physical_memory.cpp  test_pipe_extended.cpp  test_priority.cpp  test_priority_inversion.cpp  test_priority_policy.cpp  test_process_image.cpp  test_process_state.cpp  test_register_file.cpp  test_resource_contention.cpp  test_result.cpp  test_round_robin.cpp  test_scheduler.cpp  test_scheduler_concurrent.cpp  test_scheduler_extended.cpp  test_scheduling_policies_extended.cpp  test_simple_fs_extended.cpp  test_spn.cpp  test_srt.cpp  test_statistics_extended.cpp  test_syscall_extended.cpp  (+11 more)
